--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/testdb_spring?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/tennis?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=Mohamed2019$
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
